--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,8 @@
 			content="Chat application"
 		/>
 		<title>TexZ</title>
+		<!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+		<script src="https://accounts.google.com/gsi/client"></script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
