--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<meta name="theme-color" content="#000000" />
+		<meta name="theme-color" content="#FD7753" />
 		<meta
 			name="description"
 			content="Chat application"
 		/>
 		<title>TexZ</title>
-		<!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
 		<script src="https://accounts.google.com/gsi/client"></script>
 	</head>
 	<body>
